--- a/projects/01_supervised/classification/customer_churn_prediction/requirements.txt
+++ b/projects/01_supervised/classification/customer_churn_prediction/requirements.txt
@@ -1,5 +1,5 @@
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
+pandas>=1.5.3
+numpy>=1.23.5
+scikit-learn>=1.0.2
+matplotlib>=3.6.2
+seaborn>=0.11.2
