--- a/projects/01_supervised/classification/text_classification/requirements.txt
+++ b/projects/01_supervised/classification/text_classification/requirements.txt
@@ -1,8 +1,8 @@
-nltk==3.6.3
-pandas==1.3.3
-matplotlib==3.4.3
-seaborn==0.11.2
-scikit-learn==0.24.2
-xgboost==1.4.2
-joblib==1.0.1
-pickle5==0.0.11
+nltk>=3.6.3
+pandas>=1.3.3
+matplotlib>=3.4.3
+seaborn>=0.11.2
+scikit-learn>=0.24.2
+xgboost>=1.4.2
+joblib>=1.0.1
+pickle5>=0.0.11
