--- a/projects/02_unsupervised/dimensionality_reduction/pca_tsne_visualization/requirements.txt
+++ b/projects/02_unsupervised/dimensionality_reduction/pca_tsne_visualization/requirements.txt
@@ -1,4 +1,4 @@
-pandas==1.5.3
-numpy==1.23.4
-matplotlib==3.6.2
-scikit-learn==1.1.3
+pandas>=1.5.3
+numpy>=1.23.4
+matplotlib>=3.6.2
+scikit-learn>=1.1.3
