--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,26 @@
-pandas
-scikit-learn
-seaborn
-matplotlib
-numpy
-jupyter
-tensorflow
-keras
-torch
+datasets>=2.19.0
+evaluate>=0.4.0
+gensim>=4.3.1
+imbalanced-learn>=0.9.1
+joblib>=1.1.0
+lightgbm>=3.3.2
+matplotlib>=3.9.0
+nltk>=3.8.1
+numpy>=1.26.0
+pandas>=2.2.0
+pillow>=10.0.0
+requests>=2.26.0
+rouge_score>=0.0.4
+scikit-learn>=1.5.0
+scipy>=1.10.1
+seaborn>=0.12.0
+sentencepiece>=0.1.96
+statsmodels>=0.13.0
+ta>=0.10.1
+tensorflow>=2.12.0
+torch>=2.2.0
+torchvision>=0.17.0
+tqdm>=4.66.0
+transformers>=4.30.0
+xgboost>=1.7.4
+yfinance>=0.2.4
